@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.236 2005/07/12 15:28:24 olereinhardt Exp $
+$Id: ChangeLog,v 1.237 2005/07/12 16:25:45 freckle Exp $
 
 2005-07-12  Ole Reinhardt <ole.reinhardt@embedded-it.de>
     * os/timer.c: Added NULL pointer check in NutTimerProcessElapsed
@@ -10,7 +10,14 @@ $Id: ChangeLog,v 1.236 2005/07/12 15:28:24 olereinhardt Exp $
     Improved docu on NutThreadRemoveQueue and NutThreadAddPriQueue
     Removed critical section from NutSleep
     
-    * os/osdebug.c: removed critical sections from various functions 
+    * os/timer.c: extracted timer creation from NutTimerStartTicks into NutTimerCreate
+
+    * os/event.c: added missing critical section in NutEventTimeout. It can
+    cause the same problems as the missing CS in NutThreadWake for the same
+    reason.
+    Removed unnecessary critical sections in NutEventPost, NutEventWait.
+    
+    * os /osdebug.c: removed critical sections from various functions 
     as thread and timer lists are not changed by IRQ anymore
     
 2005-07-07  Matthias Ringwald  <mringwal@.inf.ethz.ch>
